fixed: nav item active tab too high

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ code {
 }
 
 .fade-in {
-  animation: fade-in .3s ease-out;
+  animation: fade-in .3s ease-out forwards;
 }
 
 /* Animate keyframe */
